login panel remove branding

--- a/src/templates/client_info_modal.html
+++ b/src/templates/client_info_modal.html
@@ -8,14 +8,14 @@
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <!-- <div class="modal-body">
                 <div class="container brand-heading-container">
                     <h6 class="brand-heading">Converse</h6>
                     <p class="brand-subtitle">{{{o.version_name}}}</p>
                     <p class="brand-subtitle">{{o.first_subtitle}}</p>
                     <p class="brand-subtitle">{{o.second_subtitle}}</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
