--- a/src/templates/converse_brand_heading.html
+++ b/src/templates/converse_brand_heading.html
@@ -1,5 +1,5 @@
 <span class="brand-heading-container">
-    <a class="brand-heading" href="https://conversejs.org" target="_blank" rel="noopener">
+    <!-- <a class="brand-heading" href="https://conversejs.org" target="_blank" rel="noopener">
         <svg class="converse-svg-logo"
             xmlns:svg="http://www.w3.org/2000/svg"
             xmlns="http://www.w3.org/2000/svg"
@@ -22,5 +22,5 @@
         <span class="brand-name">
             <span class="brand-name__text">converse<span class="subdued">.js</span></span>
         </span>
-    </a>
+    </a> -->
 </span>
