--- a/src/templates/inverse_brand_heading.html
+++ b/src/templates/inverse_brand_heading.html
@@ -1,7 +1,7 @@
 <div>
     <div class="container brand-heading-container">
         <h1 class="brand-heading brand-heading--inverse">
-            <svg class="converse-svg-logo"
+            <!-- <svg class="converse-svg-logo"
                 xmlns:svg="http://www.w3.org/2000/svg"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -19,14 +19,14 @@
                         </g>
                     </g>
                 </g>
-            </svg>
-            <span class="brand-name">
+            </svg> -->
+            <!-- <span class="brand-name">
                 <span class="brand-name__text">converse<span class="subdued">.js</span></span>
                 <p class="byline">messaging freedom</p>
-            </span>
+            </span> -->
         </h1>
-        <p class="brand-subtitle">{{{o.version_name}}}</p>
+        <!-- <p class="brand-subtitle">{{{o.version_name}}}</p>
         <p class="brand-subtitle"><a target="_blank" rel="nofollow" href="https://conversejs.org">Open Source</a> XMPP chat client brought to you by <a target="_blank" rel="nofollow" href="https://opkode.com">Opkode</a> </p>
-        <p class="brand-subtitle"><a target="_blank" rel="nofollow" href="https://hosted.weblate.org/projects/conversejs/#languages">Translate</a> it into your own language</p>
+        <p class="brand-subtitle"><a target="_blank" rel="nofollow" href="https://hosted.weblate.org/projects/conversejs/#languages">Translate</a> it into your own language</p> -->
     </div>
 </div>
