--- a/src/templates/chatarea.html
+++ b/src/templates/chatarea.html
@@ -1,4 +1,5 @@
 <div class="chat-area col-md-9 col-8">
+    <!-- <div class="chat-upper-toolbar"></div> -->
     <div class="chat-content {[ if (o.show_send_button) { ]}chat-content-sendbutton{[ } ]}" aria-live="polite"></div>
     <div class="message-form-container"/>
 </div>
