--- a/src/templates/chatbox.html
+++ b/src/templates/chatbox.html
@@ -1,5 +1,8 @@
 <div class="flyout box-flyout">
     <div class="chat-body">
+        <div class="top-toolbar">
+            toolbar upeet
+        </div>
         <div class="chat-content {[ if (o.show_send_button) { ]}chat-content-sendbutton{[ } ]}" aria-live="polite"></div>
         <div class="message-form-container"></div>
     </div>
