--- a/src/templates/chatbox.html
+++ b/src/templates/chatbox.html
@@ -2,6 +2,17 @@
     <div class="chat-body">
         <div class="top-toolbar">
             toolbar upeet
+            <ui class="top-toolbar-manu">
+                <li class="top-toolbar-video-cal">
+                    <i class="fa fa-video"></i>
+                </li>
+                <li class="top-toolbar-audio-cal">
+                    <i class="fa fa-phone"></i>
+                </li>
+                <li class="top-toolbar-file-attach">
+                    <i class="fa fa-paperclip"></i>
+                </li>
+            </ui>
         </div>
         <div class="chat-content {[ if (o.show_send_button) { ]}chat-content-sendbutton{[ } ]}" aria-live="polite"></div>
         <div class="message-form-container"></div>
