--- a/src/templates/profile_view.html
+++ b/src/templates/profile_view.html
@@ -10,8 +10,9 @@
                         {[ if (o.chat_status === 'away') { ]} fa fa-circle chat-status chat-status--away{[ } ]}
                         {[ if (o.chat_status === 'xa') { ]} far fa-circle chat-status chat-status--xa {[ } ]}
                         {[ if (o.chat_status === 'offline') { ]} fa fa-circle chat-status chat-status--offline{[ } ]}"></span>
-                        <!-- {{{o.status_message}}}</span> -->
-                    </span>
+                        <!-- {{{o.status_message}}}-->
+                        </span>
+                </span>
                 <!-- <a class="controlbox-heading__btn change-status fa fa-pencil-alt" title="{{{o.title_change_status}}}" data-toggle="modal" data-target="#changeStatusModal"></a> -->
             </div>
     </a>
