open rooms list

--- a/src/templates/rooms_list.html
+++ b/src/templates/rooms_list.html
@@ -5,4 +5,4 @@
         <span class="fa {[ if (o.toggle_state === o._converse.OPENED) { ]} fa-caret-down {[ } else { ]} fa-caret-right {[ } ]}">
         </span> {{{o.label_rooms}}}</div> -->
         <!-- <span>{{{o.label_rooms}}}</span> -->
-<div class="items-list rooms-list open-rooms-list"></div>
+<div class="items-list rooms-list"></div>
