--- a/src/templates/chatarea.html
+++ b/src/templates/chatarea.html
@@ -1,8 +1,7 @@
 <div class="chat-area col-md-9 col-8">
     <!-- <div class="chat-upper-toolbar"></div> -->
     <div class="top-toolbar">
-            toolbar upeet
-            <ui class="top-toolbar-manu">
+            <ul class="top-toolbar-menu">
                 <li class="top-toolbar-video-cal">
                     <i class="fa fa-video"></i>
                 </li>
@@ -12,7 +11,7 @@
                 <li class="top-toolbar-file-attach">
                     <i class="fa fa-paperclip"></i>
                 </li>
-            </ui>
+            </ul>
         </div>
     <div class="chat-content {[ if (o.show_send_button) { ]}chat-content-sendbutton{[ } ]}" aria-live="polite"></div>
     <div class="message-form-container"/>
