--- a/src/templates/chatbox.html
+++ b/src/templates/chatbox.html
@@ -1,8 +1,7 @@
 <div class="flyout box-flyout">
     <div class="chat-body">
         <div class="top-toolbar">
-            toolbar upeet
-            <ui class="top-toolbar-manu">
+            <ul class="top-toolbar-menu">
                 <li class="top-toolbar-video-cal">
                     <i class="fa fa-video"></i>
                 </li>
@@ -12,7 +11,7 @@
                 <li class="top-toolbar-file-attach">
                     <i class="fa fa-paperclip"></i>
                 </li>
-            </ui>
+            </ul>
         </div>
         <div class="chat-content {[ if (o.show_send_button) { ]}chat-content-sendbutton{[ } ]}" aria-live="polite"></div>
         <div class="message-form-container"></div>
