--- a/src/templates/group_header.html
+++ b/src/templates/group_header.html
@@ -1,5 +1,6 @@
 <!-- <a href="#" class="list-toggle group-toggle controlbox-padded" title="{{{o.desc_group_toggle}}}"> -->
     <!-- <span class="fa {[ if (o.toggle_state === o._converse.OPENED) { ]} fa-caret-down {[ } else { ]} fa-caret-right {[ } ]}"> -->
-    </span> {{{o.label_group}}}
+    <!-- </span>  -->
+    <span>{{{o.label_group}}}</span>
 <!-- </a> -->
 <ul class="items-list roster-group-contacts {[ if (o.toggle_state === o._converse.CLOSED) { ]} collapsed {[ } ]}"></ul>
