--- a/src/templates/chatbox_head.html
+++ b/src/templates/chatbox_head.html
@@ -1,6 +1,6 @@
 <div class="chat-head chat-head-chatbox row no-gutters">
-    <div class="chatbox-navback"><i class="fa fa-arrow-left"></i></div>
-    <div class="chatbox-title">
+    <!-- <div class="chatbox-navback"><i class="fa fa-arrow-left"></i></div> -->
+    <!-- <div class="chatbox-title">
         <div class="row no-gutters">
             <canvas class="avatar" height="36" width="36"></canvas>
             <div class="col chat-title" title="{{{o.jid}}}">
@@ -14,9 +14,9 @@
                 <p class="user-custom-message">{{{ o.status }}}</p>
             </div>
         </div>
-    </div>
-    <div class="chatbox-buttons row no-gutters">
+    </div> -->
+    <!-- <div class="chatbox-buttons row no-gutters">
         <a class="chatbox-btn close-chatbox-button fa fa-times" title="{{{o.info_close}}}"></a>
         <a class="chatbox-btn show-user-details-modal fa fa-id-card" title="{{{o.info_details}}}"></a>
-    </div>
+    </div> -->
 </div>
