UI chatroom change ui

--- a/src/templates/chatbox_head.html
+++ b/src/templates/chatbox_head.html
@@ -1,4 +1,4 @@
-<div class="chat-head chat-head-chatbox row no-gutters">
+<!-- <div class="chat-head chat-head-chatbox row no-gutters"> -->
     <!-- <div class="chatbox-navback"><i class="fa fa-arrow-left"></i></div> -->
     <!-- <div class="chatbox-title">
         <div class="row no-gutters">
@@ -19,4 +19,4 @@
         <a class="chatbox-btn close-chatbox-button fa fa-times" title="{{{o.info_close}}}"></a>
         <a class="chatbox-btn show-user-details-modal fa fa-id-card" title="{{{o.info_details}}}"></a>
     </div> -->
-</div>
+<!-- </div> -->
