--- a/src/templates/add_chatroom_modal.html
+++ b/src/templates/add_chatroom_modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title"
-                    id="add-chatroom-modal-label">{{{o.__('Enter a new Groupchat')}}}</h5>
+                    id="add-chatroom-modal-label">{{{o.__('Create New Channel')}}}</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
