add contact by name withot xmpp domain

--- a/src/templates/chatarea.html
+++ b/src/templates/chatarea.html
@@ -1,6 +1,6 @@
 <div class="chat-area col-md-9 col-8">
     <!-- <div class="chat-upper-toolbar"></div> -->
-    <div class="top-toolbar">
+    <div class="top-toolbar container-fluid">
         <div class="row">
             <div class="col-sm-6 red">Annoucements</div>
             <div class="col-sm-6 blue">
