--- a/src/templates/chatarea.html
+++ b/src/templates/chatarea.html
@@ -2,8 +2,8 @@
     <!-- <div class="chat-upper-toolbar"></div> -->
     <div class="top-toolbar container-fluid">
         <div class="row">
-            <div class="col-sm-6 red">Annoucements</div>
-            <div class="col-sm-6 blue">
+            <div class="col-sm-6 room-description">Announcement</div>
+            <div class="col-sm-6 ">
                 <ul class="top-toolbar-menu">
                     <li class="top-toolbar-video-cal">
                         <i class="fa fa-video"></i>
