--- a/src/templates/chatbox.html
+++ b/src/templates/chatbox.html
@@ -1,9 +1,9 @@
 <div class="flyout box-flyout">
     <div class="chat-body">
-        <div class="top-toolbar">
+        <div class="top-toolbar container-fluid">
             <div class="row">
-                <div class="col-sm-6 red">Annoucements</div>
-                <div class="col-sm-6 blue">
+                <div class="col-sm-6 room-description">Announcement</div>
+                <div class="col-sm-6 ">
                     <ul class="top-toolbar-menu">
                         <li class="top-toolbar-video-cal">
                             <i class="fa fa-video"></i>
