--- a/src/templates/chatarea.html
+++ b/src/templates/chatarea.html
@@ -3,7 +3,7 @@
     <div class="top-toolbar container-fluid">
         <div class="row">
             <div class="col-sm-6 room-description">Announcement</div>
-            <div class="col-sm-6 ">
+            <div class="col-sm-6 room-controls">
                 <ul class="top-toolbar-menu">
                     <li class="top-toolbar-video-cal">
                         <i class="fa fa-video"></i>
