--- a/src/templates/profile_view.html
+++ b/src/templates/profile_view.html
@@ -20,9 +20,9 @@
         <a href="#" data-toggle="dropdown" class="profile-menu media-title dropdown-toggle font-weight-semibold" aria-expanded="false">{{{o.fullname}}}</a>
         <div class="dropdown-menu animate slideIn">
             <a href="javascript:void(0);" class="dropdown-item show-profile">Profile &amp; Account</a>
-            <a href="javascript:void(0);" class="dropdown-item">Preferences</a>
-            <a href="javascript:void(0);" class="dropdown-item">Help &amp; feedback</a>
-            <a href="javascript:void(0);" class="controlbox-heading__btn logout fa fa-sign-out-alt align-self-center">Log out</a>
+            <!-- <a href="javascript:void(0);" class="dropdown-item">Preferences</a> -->
+            <!-- <a href="javascript:void(0);" class="dropdown-item">Help &amp; feedback</a> -->
+            <a href="javascript:void(0);" class="dropdown-item logout align-self-center">Log out</a>
         </div>
         <div class="user-role font-size-xs opacity-75">
 
