--- a/src/templates/chatarea.html
+++ b/src/templates/chatarea.html
@@ -1,20 +1,43 @@
 <div class="chat-area col-md-9 col-8">
     <!-- <div class="chat-upper-toolbar"></div> -->
-    <div class="top-toolbar container-fluid">
-        <div class="row">
-            <div class="col-sm-6 room-description">Announcement</div>
-            <div class="col-sm-6 room-controls">
-                <ul class="top-toolbar-menu">
-                    <li class="top-toolbar-video-cal">
-                        <i class="fa fa-video"></i>
-                    </li>
-                    <li class="top-toolbar-audio-cal">
-                        <i class="fa fa-phone"></i>
-                    </li>
-                    <li class="top-toolbar-file-attach">
-                        <i class="fa fa-paperclip"></i>
-                    </li>
-                </ul>
+    <div class="top-toolbar">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6 room-description">
+                    <div class="container-fluid">
+                        <div class="row channel-name">
+                            #Announcement
+                        </div>
+                        <div class="row channel-summary">
+                                <ul class="m-0 pl-0 d-block list-unstyled channel-info">
+                                <li>
+                                    <span class="favorite"><i class="fas fa-star"></i></span>
+                                </li>
+                                <li>
+                                    <span class="mr-1">13</span>
+                                    <i class="far fa-user"></i>
+                                </li>
+                                <li>
+                                    <span class="channel-desc">Company-wide announcements and work-based
+                                        matters</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    </div>
+                <div class="col-sm-6 room-controls">
+                    <ul class="top-toolbar-menu">
+                        <li class="top-toolbar-video-cal">
+                            <i class="fa fa-video"></i>
+                        </li>
+                        <li class="top-toolbar-audio-cal">
+                            <i class="fa fa-phone"></i>
+                        </li>
+                        <li class="top-toolbar-file-attach">
+                            <i class="fa fa-paperclip"></i>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
