--- a/src/templates/room_item.html
+++ b/src/templates/room_item.html
@@ -4,7 +4,7 @@
        data-room-jid="{{{o.jid}}}"
        data-room-name="{{{o.name}}}"
        title="{{{o.open_title}}}"
-       href="#">{{{o.name}}}</a>
+       href="#">{{{o.display_name}}}</a>
     <a class="right room-info icon-room-info"
        data-room-jid="{{{o.jid}}}"
        title="{{{o.info_title}}}" href="#"></a>
