ChatArea add controle class

--- a/src/templates/chatbox.html
+++ b/src/templates/chatbox.html
@@ -10,15 +10,15 @@
                             </div>
                             <div class="row channel-summary">
                                     <ul class="m-0 pl-0 d-block list-unstyled channel-info">
-                                    <li>
+                                    <li class="favorite-star">
                                         <span class="favorite"><i class="fas fa-star"></i></span>
                                     </li>
-                                    <li>
-                                        <span class="mr-1">13</span>
+                                    <li class="favorite-user">
+                                        <span class="mr-1 ">13</span>
                                         <i class="far fa-user"></i>
                                     </li>
-                                    <li>
-                                        <span class="channel-desc">Company-wide announcements and work-based
+                                    <li class="favorite-channel">
+                                        <span class="channel-desc ">Company-wide announcements and work-based
                                             matters</span>
                                     </li>
                                 </ul>
