--- a/src/templates/profile_view.html
+++ b/src/templates/profile_view.html
@@ -25,7 +25,7 @@
             <a href="javascript:void(0);" class="dropdown-item logout align-self-center">Log out</a>
         </div>
         <div class="user-role font-size-xs opacity-75">
-
+                {{{o.role}}}
         </div>
     </div>
     <!-- <span class="username w-100 align-self-center">{{{o.fullname}}}</span>
