ChatArea class name update

--- a/src/templates/toolbar_fileupload.html
+++ b/src/templates/toolbar_fileupload.html
@@ -1,4 +1,4 @@
-<li class="upload-file">
+<li class="upload-file" style="display:none">
     <a class="fa fa-paperclip" title="{{{o.tooltip_upload_file}}}"></a>
     <input type="file" class="fileupload" multiple="" style="display:none"/>
 </li> 
