--- a/src/templates/chatbox_message_form.html
+++ b/src/templates/chatbox_message_form.html
@@ -2,7 +2,7 @@
 <div class="new-msgs-indicator hidden">▼ {{{ o.unread_msgs }}} ▼</div>
 <form class="sendXMPPMessage">
     <div class="row">
-        <div class="col-sm-6 messag-input-area">
+        <div class="col-sm-6 message-input-area">
             <input type="text" placeholder="{{o.label_spoiler_hint}}" value="{{ o.hint_value }}"
             class="{[ if (!o.composing_spoiler) { ]} hidden {[ } ]} spoiler-hint"/>
      
