--- a/src/templates/profile_view.html
+++ b/src/templates/profile_view.html
@@ -28,6 +28,9 @@
                 {{{o.role}}}
         </div>
     </div>
+    <div>
+        <i class="fas fa-bell"></i>
+    </div>
     <!-- <span class="username w-100 align-self-center">{{{o.fullname}}}</span>
     {[ if (o._converse.show_client_info) { ]}
         <a class="controlbox-heading__btn show-client-info fa fa-info-circle align-self-center" title="{{{o.info_details}}}"></a>
