--- a/src/templates/chatbox.html
+++ b/src/templates/chatbox.html
@@ -6,7 +6,7 @@
                     <div class="col-sm-6 room-description">
                         <div class="container-fluid">
                             <div class="row channel-name">
-                                #Announcement
+                                #Announcements
                             </div>
                             <div class="row channel-summary">
                                     <ul class="m-0 pl-0 d-block list-unstyled channel-info">
