--- a/src/templates/list_chatrooms_modal.html
+++ b/src/templates/list_chatrooms_modal.html
@@ -5,7 +5,7 @@
                 <h5 class="modal-title"
                     id="list-chatrooms-modal-label">{{{o.heading_list_chatrooms}}}</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
+                    <span aria-hidden="true">X</span>
                 </button>
             </div>
             <div class="modal-body d-flex flex-column">
