--- a/src/templates/client_info_modal.html
+++ b/src/templates/client_info_modal.html
@@ -5,7 +5,7 @@
             <div class="modal-header">
                 <h5 class="modal-title" id="changeStatusModalLabel">{{{o.modal_title}}}</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="{{{o.label_close}}}">
-                    <span aria-hidden="true">×</span>
+                    <span aria-hidden="true">X</span>
                 </button>
             </div>
             <!-- <div class="modal-body">
