ChatRoomHead add room_description

--- a/src/templates/chatroom_head.html
+++ b/src/templates/chatroom_head.html
@@ -38,7 +38,7 @@
                                     <i class="far fa-user"></i>
                                 </li>
                                 <li class="favorite-channel">
-                                    <span class="channel-desc ">{{o.room_description}}</span>
+                                    <span class="channel-desc ">{{{o.room_description}}}</span>
                                 </li>
                             </ul>
                         </div>
