--- a/src/templates/chatbox.html
+++ b/src/templates/chatbox.html
@@ -3,7 +3,7 @@
         <div class="top-toolbar">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-6 room-description">
+                    <!-- <div class="col-sm-6 room-description">
                         <div class="container-fluid">
                             <div class="row channel-name">
                                 #Announcements
@@ -24,7 +24,7 @@
                                 </ul>
                             </div>
                         </div>
-                        </div>
+                        </div> -->
                     <div class="col-sm-6 room-controls">
                         <ul class="top-toolbar-menu">
                         </ul>
