--- a/src/templates/occupant.html
+++ b/src/templates/occupant.html
@@ -13,6 +13,7 @@
     {[ } ]}>
     <div class="row no-gutters">
         <div class="col-auto">
+                <img class="occupant-avatar room-avatar avatar" data-room-jid="{{{o.jid}}}" src="{{{o.image}}}" height="22" width="22">
             <div class="occupant-status occupant-{{{o.show}}} circle" title="{{{o.hint_show}}}"></div>
         </div>
         <div class="col occupant-nick-badge">
