model x button change

--- a/src/templates/add_chatroom_modal.html
+++ b/src/templates/add_chatroom_modal.html
@@ -5,7 +5,7 @@
                 <h5 class="modal-title"
                     id="add-chatroom-modal-label">{{{o.__('Create New Channel')}}}</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">X</span>
+                        <i class="fas fa-times"></i>
                 </button>
             </div>
             <div class="modal-body">
