--- a/src/templates/add_contact_modal.html
+++ b/src/templates/add_contact_modal.html
@@ -4,7 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="addContactModalLabel">{{{o.heading_new_contact}}}</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">X</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fas fa-times"></i></button>
             </div>
             <form class="converse-form add-xmpp-contact">
                 <div class="modal-body">
