--- a/src/templates/alert_modal.html
+++ b/src/templates/alert_modal.html
@@ -4,7 +4,7 @@
       <div class="modal-header {{{o.type}}}">
         <h5 class="modal-title">{{{o.title}}}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">X</span>
+            <i class="fas fa-times"></i>
         </button>
       </div>
       <div class="modal-body">{[o.messages.forEach(function (message) { ]}
