--- a/src/templates/chat_status_modal.html
+++ b/src/templates/chat_status_modal.html
@@ -5,7 +5,7 @@
             <div class="modal-header">
                 <h5 class="modal-title" id="changeStatusModalLabel">{{{o.modal_title}}}</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="{{{o.label_close}}}">
-                    <span aria-hidden="true">×</span>
+                        <i class="fas fa-times"></i>
                 </button>
             </div>
             <div class="modal-body">
