--- a/src/templates/profile_modal.html
+++ b/src/templates/profile_modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="user-profile-modal-label">{{{o.heading_profile}}}</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="{{{o.label_close}}}"><span aria-hidden="true">X</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="{{{o.label_close}}}"><i class="fas fa-times"></i></button>
             </div>
             <div class="modal-body">
                 {[ if (o._converse.pluggable.plugins['converse-omemo'].enabled(o._converse)) { ]}
