invite Widget hide domain from jid

--- a/src/templates/profile_view.html
+++ b/src/templates/profile_view.html
@@ -8,7 +8,7 @@
                         {[ if (o.chat_status === 'online') { ]} fa fa-circle chat-status chat-status--online{[ } ]}
                         {[ if (o.chat_status === 'dnd') { ]} fa fa-minus-circle chat-status chat-status--busy {[ } ]}
                         {[ if (o.chat_status === 'away') { ]} fa fa-circle chat-status chat-status--away{[ } ]}
-                        {[ if (o.chat_status === 'xa') { ]} far fa-circle chat-status chat-status--xa {[ } ]}
+                        {[ if (o.chat_status === 'xa') { ]} fa fa-circle chat-status chat-status--xa {[ } ]}
                         {[ if (o.chat_status === 'offline') { ]} fa fa-circle chat-status chat-status--offline{[ } ]}"></span>
                         <!-- {{{o.status_message}}}-->
                         </span>
