--- a/src/templates/chat_status_modal.html
+++ b/src/templates/chat_status_modal.html
@@ -33,7 +33,7 @@
                             <input {[ if (o.status === 'xa') { ]} checked="checked" {[ } ]}
                                    type="radio" id="radio-xa" value="xa" name="chat_status" class="custom-control-input"/>
                             <label class="custom-control-label" for="radio-xa">
-                                <span class="far fa-circle chat-status chat-status--xa"></span>{{{o.label_xa}}}</label>
+                                <span class="fa fa-circle chat-status chat-status--xa"></span>{{{o.label_xa}}}</label>
                         </div>
                     </div>
                     <div class="form-group">
