Login Panel change html template

--- a/src/templates/profile_view.html
+++ b/src/templates/profile_view.html
@@ -13,6 +13,7 @@
                         <!-- {{{o.status_message}}}-->
                         </span>
                 </span>
+                <!-- <span>{{{o.status_message}}}</span> -->
                 <!-- <a class="controlbox-heading__btn change-status fa fa-pencil-alt" title="{{{o.title_change_status}}}" data-toggle="modal" data-target="#changeStatusModal"></a> -->
             </div>
     </a>
@@ -22,6 +23,7 @@
             <a href="javascript:void(0);" class="dropdown-item show-profile">Profile &amp; Account</a>
             <!-- <a href="javascript:void(0);" class="dropdown-item">Preferences</a> -->
             <!-- <a href="javascript:void(0);" class="dropdown-item">Help &amp; feedback</a> -->
+            <a class="controlbox-heading__btn change-status" title="{{{o.title_change_status}}}" data-toggle="modal" data-target="#changeStatusModal">Change Status</a>
             <a href="javascript:void(0);" class="dropdown-item logout align-self-center">Log out</a>
         </div>
         <div class="user-role font-size-xs opacity-75">
