RegistationForm password match

--- a/src/templates/login_panel.html
+++ b/src/templates/login_panel.html
@@ -44,5 +44,6 @@
         {[ } ]}
         </div>
     </form>
+    <img className="image-bottom" src="{{{o.login_bottom_image}}}" alt="" />
 
 </div>
