--- a/src/templates/add_chatroom_modal.html
+++ b/src/templates/add_chatroom_modal.html
@@ -14,14 +14,20 @@
                 <h1></h1>
                 <form class="converse-form add-chatroom">
                     <div class="form-group">
-                        <input id="private-channel" type="checkbox" name="privatechannel" >
-                        <label for="private-channel" class="form-check-label" >{{{o.__('Option one is enabled')}}}</label>
-                        <span>{{{o.__('just invited people can access this channel')}}}</span>
+                        <label class="switch">
+                            <input id="private-channel" type="checkbox" name="privatechannel" checked>
+                            <span class="slider round"></span>
+                            <label for="private-channel" class="form-check-label" >{{{o.__('Option one is enabled')}}}</label>
+                            <span>{{{o.__('just invited people can access this channel')}}}</span>
+                        </label>
                     </div>
                     <div class="form-group">
-                        <input id="read-only-channel" type="checkbox" name="readonlychannel">
-                        <label for="read-only-channel" class="form-check-label">{{{o.__('Read Only Channel')}}}</label>
-                        <span>{{{o.__('All users in the channel can write messages')}}}</span>
+                        <label class="switch">
+                            <input id="read-only-channel" type="checkbox" name="readonlychannel">
+                            <span class="slider round"></span>
+                            <label for="read-only-channel" class="form-check-label">{{{o.__('Read Only Channel')}}}</label>
+                            <span>{{{o.__('All users in the channel can write messages')}}}</span>
+                        </label>
                     </div>
                     <div class="form-group">
                             <label for="chatroom">{{{o.label_room_address}}}</label>
@@ -29,13 +35,13 @@
                             <span>{{{o.__('Names must be lowercase without spaces or period, and shorter than 22 characters')}}}</span>
                     </div>
                     <div class="form-group">
-                            <label for="chatroom">{{{o.__('Purpose')}}}({{{o.__('optionl')}}})</label>
-                            <input type="text" required="required" name="chatroom" class="form-control" />
+                            <label for="purpose">{{{o.__('Purpose')}}}({{{o.__('optionl')}}})</label>
+                            <input type="text" required="required" name="purpose" class="form-control" />
                             <span>{{{o.__("What's the channel about?")}}}</span>
                     </div>
                     <div class="form-group">
-                            <label for="chatroom">{{{o.__('Invite Users')}}}</label>
-                            <input type="text" required="required" name="chatroom" class="form-control" />
+                            <label for="users">{{{o.__('Invite Users')}}}</label>
+                            <input type="text" required="required" name="users" class="form-control" />
                             <span>{{{o.__('name must be a lowercase,without space, period, and shorter than 22 characters')}}}</span>
                     </div>
                     
