--- a/src/templates/chatroom_head.html
+++ b/src/templates/chatroom_head.html
@@ -11,14 +11,14 @@
     </div> -->
     <!-- Sanitized in converse-muc-views. We want to render links. -->
     <p class="chatroom-description">{{o.description}}</p>
-<!-- </div>
-<div class="chatbox-buttons row no-gutters">
+<!-- </div>-->
+<!-- <div class="chatbox-buttons row no-gutters">
     <a class="chatbox-btn close-chatbox-button fa fa-sign-out-alt" title="{{{o.info_close}}}"></a>
     {[ if (o.affiliation == 'owner') { ]}
     <a class="chatbox-btn configure-chatroom-button fa fa-wrench" title="{{{o.info_configure}}} "></a>
     {[ } ]}
     <a class="chatbox-btn show-room-details-modal fa fa-info-circle" title="{{{o.info_details}}}"></a>
-</div> -->
+</div>  -->
 <div class="chatbox-title">
 <div class="top-toolbar">
         <div class="container-fluid">
