--- a/src/templates/add_chatroom_modal.html
+++ b/src/templates/add_chatroom_modal.html
@@ -55,7 +55,7 @@
                         <input type="text" pattern=".*\S+.*" title="{{{o.__('This field is required')}}}" required="required" name="nickname" value="{{{o.nick}}}" class="form-control"/>
                     </div>
                     {[ } ]}
-                    <input type="button" class="btn cancel-btn" name="cancel" value="{{{o.__('Cancel')}}}"/>
+                    <input type="button" class="btn cancel-btn close" data-dismiss="modal" aria-label="Close" name="cancel" value="{{{o.__('Cancel')}}}"/>
                     <input type="submit" class="btn create-btn" name="join" value="{{{o.__('Create')}}}"/>
                 </form>
             </div>
