--- a/src/templates/chatroom_head.html
+++ b/src/templates/chatroom_head.html
@@ -26,7 +26,7 @@
                 <div class="col-sm-6 room-description">
                     <div class="container-fluid">
                         <div class="row channel-name">
-                            #{{{ o.Strophe.getNodeFromJid(o.jid) }}}
+                            #{{ o.name }}
                         </div>
                         <div class="row channel-summary">
                                 <ul class="m-0 pl-0 d-block list-unstyled channel-info">
