--- a/src/templates/chatroom_head.html
+++ b/src/templates/chatroom_head.html
@@ -48,6 +48,13 @@
                     <ul class="top-toolbar-menu">
                     </ul>
                 </div>
+                <div class="chatbox-buttons row no-gutters">
+                        <a class="chatbox-btn close-chatbox-button fa fa-sign-out-alt" title="{{{o.info_close}}}"></a>
+                        <!-- {[ if (o.affiliation == 'owner') { ]}
+                        <a class="chatbox-btn configure-chatroom-button fa fa-wrench" title="{{{o.info_configure}}} "></a>
+                        {[ } ]}
+                        <a class="chatbox-btn show-room-details-modal fa fa-info-circle" title="{{{o.info_details}}}"></a> -->
+                </div> 
             </div>
         </div>
       </div>
