--- a/src/templates/add_chatroom_modal.html
+++ b/src/templates/add_chatroom_modal.html
@@ -46,7 +46,11 @@
                     </div>
                     <div class="form-group channel-invite">
                             <label for="users">{{{o.__('Invite Users')}}}</label>
-                            <input type="text" required="required" name="users" class="form-control" />
+                            <select class="selectpicker" multiple data-live-search="true">
+                                <option>Mustard</option>
+                                <option>Ketchup</option>
+                                <option>Relish</option>
+                            </select>
                             <span>{{{o.__('Name must be a lowercase,without space, period, and shorter than 22 characters')}}}</span>
                     </div>
                     
