--- a/src/templates/add_contact_modal.html
+++ b/src/templates/add_contact_modal.html
@@ -8,7 +8,7 @@
             </div>
             <form class="converse-form add-xmpp-contact">
                 <div class="modal-body">
-                    <div class="form-group add-xmpp-contact__jid">
+                    <!-- <div class="form-group add-xmpp-contact__jid">
                         <label class="clearfix" for="jid">{{{o.label_xmpp_address}}}:</label>
                         <div class="suggestion-box suggestion-box__jid">
                             <ul class="suggestion-box__results suggestion-box__results--above" hidden=""></ul>
@@ -19,7 +19,7 @@
                                    placeholder="{{{o.contact_placeholder}}}"/>
                             <span class="suggestion-box__additions visually-hidden" role="status" aria-live="assertive" aria-relevant="additions"></span>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="form-group add-xmpp-contact__name">
                         <label class="clearfix" for="name">{{{o.label_nickname}}}:</label>
                         <div class="suggestion-box suggestion-box__name">
