--- a/src/templates/login_panel.html
+++ b/src/templates/login_panel.html
@@ -2,7 +2,7 @@
     <form id="converse-login" class="converse-form" method="post">
         <div>
         <div class="onboard-title">Welcome Back !</div>
-        <div class="onboard-text">We’re happy to have you here again!</div>
+        <div class="onboard-text">We&apos;re happy to have you here again!</div>
         <div class="conn-feedback fade-in {[ if (!o.conn_feedback_subject) { ]} hidden {[ } ]} {{{o.conn_feedback_class}}}">
             <p class="feedback-subject">{{{ o.conn_feedback_subject }}}</p>
             <p class="feedback-message {[ if (!o.conn_feedback_message) { ]} hidden {[ } ]}">{{{o.conn_feedback_message}}}</p>
