--- a/src/templates/add_chatroom_modal.html
+++ b/src/templates/add_chatroom_modal.html
@@ -45,9 +45,9 @@
                             <span>{{{o.__("What's the channel about?")}}}</span>
                     </div>
                     <div class="form-group channel-invite">
-                            <label for="users">{{{o.__('Invite Users')}}}</label>
-                            <input type="text" required="required" name="invitees" class="form-control" />
-                            <span>{{{o.__('Name must be a lowercase,without space, period, and shorter than 22 characters')}}}</span>
+                        <label for="users">{{{o.__('Invite Users')}}}</label>
+                        <select class="form-control channel-users-invite-list" name="users" multiple="multiple"></select>
+                        <span>{{{o.__('Name must be a lowercase,without space, period, and shorter than 22 characters')}}}</span>
                     </div>
                     {[ if (!o._converse.locked_muc_nickname) { ]}
                     <div class="form-group" >
