room configuration invitaion is working

--- a/src/templates/add_chatroom_modal.html
+++ b/src/templates/add_chatroom_modal.html
@@ -20,7 +20,7 @@
                                 <input id="private-channel" type="checkbox" name="privatechannel" checked>
                                 <span class="slider round"></span>
                             </label>
-                            <label for="private-channel" class="form-check-label" >{{{o.__('Private Channel')}}}</label>
+                            <label for="privatechannel" class="form-check-label" >{{{o.__('Private Channel')}}}</label>
                         </div>
                         <span>{{{o.__('Just invited people can access this channel')}}}</span>
                     </div>
@@ -30,7 +30,7 @@
                                 <input id="read-only-channel" type="checkbox" name="readonlychannel">
                                 <span class="slider round"></span>
                             </label>
-                            <label for="read-only-channel" class="form-check-label">{{{o.__('Read-Only Channel')}}}</label>
+                            <label for="readonlychannel" class="form-check-label">{{{o.__('Read-Only Channel')}}}</label>
                         </div>
                         <span>{{{o.__('All users in the channel can write messages')}}}</span>
                     </div>
