Added a col-6 to chat-head

--- a/src/templates/chatbox_head.html
+++ b/src/templates/chatbox_head.html
@@ -45,6 +45,7 @@
                         </div>
                     </div>
                     </div> -->
+                <div class="col-sm-6"></div>
                 <div class="col-sm-6 room-controls">
                     <ul class="top-toolbar-menu">
                     </ul>
