--- a/src/templates/chatbox_head.html
+++ b/src/templates/chatbox_head.html
@@ -49,10 +49,10 @@
                 <div class="col-sm-6 room-controls">
                     <ul class="top-toolbar-menu">
                     </ul>
-                </div>
-                <div class="chatbox-buttons row no-gutters">
-                    <a class="chatbox-btn close-chatbox-button fa fa-times" title="{{{o.info_close}}}"></a>
-                    <a class="chatbox-btn show-user-details-modal fa fa-id-card" title="{{{o.info_details}}}"></a>
+                    <div class="chatbox-buttons">
+                        <a class="chatbox-btn show-user-details-modal fa fa-id-card" title="{{{o.info_details}}}"></a>
+                        <a class="chatbox-btn close-chatbox-button fa fa-times" title="{{{o.info_close}}}"></a>
+                    </div>
                 </div>
             </div>
         </div>
