--- a/src/templates/chatroom_head.html
+++ b/src/templates/chatroom_head.html
@@ -47,14 +47,14 @@
                 <div class="col-sm-6 room-controls">
                     <ul class="top-toolbar-menu">
                     </ul>
-                </div>
-                <div class="chatbox-buttons row no-gutters">
+                    <div class="chatbox-buttons-custom">
                         <a class="chatbox-btn close-chatbox-button fa fa-sign-out-alt" title="{{{o.info_close}}}"></a>
                         <!-- {[ if (o.affiliation == 'owner') { ]}
                         <a class="chatbox-btn configure-chatroom-button fa fa-wrench" title="{{{o.info_configure}}} "></a>
                         {[ } ]}
                         <a class="chatbox-btn show-room-details-modal fa fa-info-circle" title="{{{o.info_details}}}"></a> -->
-                </div> 
+                    </div>
+                </div>
             </div>
         </div>
       </div>
