Image Previewr Added

--- a/src/templates/image.html
+++ b/src/templates/image.html
@@ -1,1 +1,4 @@
-<a href="{{{o.url}}}" target="_blank" rel="noopener"><img class="chat-image img-thumbnail" src="{{{o.url}}}"/></a>
+<!-- <<<<MDEV-->
+<!-- <a href="{{{o.url}}}" target="_blank" rel="noopener"><img class="chat-image img-thumbnail" src="{{{o.url}}}"/></a> -->
+<div data-url="{{{o.url}}}"  rel="noopener"><img class="chat-image img-thumbnail" src="{{{o.url}}}"/></div>
+<!-- MDEV >>>>-->
