Room Configuration Modal added

--- a/src/templates/add_chatroom_modal.html
+++ b/src/templates/add_chatroom_modal.html
@@ -32,7 +32,7 @@
                             </label>
                             <label for="readonlychannel" class="form-check-label">{{{o.__('Read-Only Channel')}}}</label>
                         </div>
-                        <span>{{{o.__('All users in the channel can write messages')}}}</span>
+                        <span>{{{o.__('Only the admin can write messages')}}}</span>
                     </div>
                     <div class="form-group channel-name">
                             <label for="chatroom">{{{o.label_room_address}}}</label>
