--- a/src/templates/chatbox.html
+++ b/src/templates/chatbox.html
@@ -1,5 +1,5 @@
 <div class="flyout box-flyout">
-    <div class="chat-body">
+    <div class="chat-body row">
         <div class="chat-area full col-12">
             <div class="chat-content {[ if (o.show_send_button) { ]}chat-content-sendbutton{[ } ]}" aria-live="polite"></div>
             <div class="message-form-container"></div>
