--- a/src/templates/chatbox.html
+++ b/src/templates/chatbox.html
@@ -1,5 +1,5 @@
 <div class="flyout box-flyout">
-    <div class="chat-body direct-chat-body row">
+    <div class="chat-body direct-chat-body row no-gutters">
         <div class="chat-area col-md-9 col-8">
             <div class="chat-content {[ if (o.show_send_button) { ]}chat-content-sendbutton{[ } ]}" aria-live="polite"></div>
             <div class="message-form-container"></div>
