--- a/src/templates/chatroom_head.html
+++ b/src/templates/chatroom_head.html
@@ -22,8 +22,8 @@
 <div class="chatbox-title">
 <div class="top-toolbar">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-6 room-description">
+            <div class="rowx">
+                <div class="room-description arc arc--r">
                     <div class="container-fluid">
                         <div class="row channel-name">
                             #{{ o.name }}
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                     </div>
-                <div class="col-sm-6 room-controls">
+                <div class="room-controls">
                     <ul class="top-toolbar-menu">
                     </ul>
                     <div class="chatbox-buttons-custom">
